--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,100 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+#include <iostream>
+using namespace std;
+//task1
+//int main()
+//{
+//    int arr[4][4] = {
+//    { 1, 2, 3, 4 },
+//    { 6, 7, 7, 9 },
+//    { 1, 2, 3, 4 },
+//    { 5, 4, 3, 2 }
+//        };
+//    int tarr[4][2]{};
+//    for (int i = 0; i < 4; i++)
+//    {
+//        for (int k = 0; k < 4; k++)
+//        {
+//            if (i==0 || i==3)
+//            {
+//                tarr[0][k] = arr[0][k] + arr[0 + 2][k];
+//            }            
+//            else 
+//            {
+//                tarr[1][k] = arr[1][k] + arr[1 + 2][k];
+//            }
+//        }
+//    }
+//    for (int i = 0; i < 2; i++)
+//    {
+//        for (int k = 0; k < 4; k++)
+//        {
+//            cout << tarr[i][k] << " ";
+//        }cout << endl;
+//    }
+//}
+// task2
+//int main()
+//{
+//    int arr[4][4] = {
+//    { 1, 2, 3, 4 },
+//    { 6, 7, 7, 9 },
+//    { 1, 2, 3, 4 },
+//    { 5, 4, 3, 2 }
+//    };
+//    int tarr[4][2]{};
+//    for (int i = 0; i < 4; i++)
+//    {
+//        for (int k = 0; k < 4; k++)
+//        {
+//            if (k == 0 || k == 2)
+//            {
+//                tarr[i][0] = arr[i][0] + arr[i][0+2];
+//            }
+//            else
+//            {
+//                tarr[i][1] = arr[i][1] + arr[i][1 + 2];
+//            }
+//        }
+//    }
+//    for (int i = 0; i < 4; i++)
+//    {
+//        for (int k = 0; k < 2; k++)
+//        {
+//            cout << tarr[i][k] << " ";
+//        }cout << endl;
+//    }
+//}
+//task3
+//int main()
+//{
+//    int arr[4][4] = {
+//    { 1, 2, 3, 4 },
+//    { 6, 7, 7, 9 },
+//    { 1, 2, 3, 4 },
+//    { 5, 4, 3, 2 }
+//    };
+//    for (int i = 0; i < 4; i++)
+//    {
+//        for (int k = 0; k < 4; k++)
+//        {
+//            cout << arr[i][k] << " ";
+//        }
+//    }
+//}
+//task4
+//int main()
+//{
+//    int arr[4][4] = {
+//    { 1, 2, 3, 4 },
+//    { 6, 7, 7, 9 },
+//    { 1, 2, 3, 4 },
+//    { 5, 4, 3, 2 }
+//    };
+//    for (int i = 0; i < 4; i++)
+//    {
+//        for (int k = 0; k < 4; k++)
+//        {
+//            cout << arr[i][k] <<endl;
+//        }
+//    }
+//}
